--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-This is the repository with materials for PhD seminar on Julia language that I
-gave on 02.03.2016 at UiO. They are inspired by talks by Jeff Bezanson, Steve
-Johnson and Jeff Bezanson which can be found on YouTube (see the ipython
-notebook)
+This is the repository with materials for PhD seminar on Julia language that I gave on 02.03.2016 at UiO. They are inspired by talks by Jeff Bezanson, Steve Johnson and Stefan Karpinski which can be found on YouTube (see the Jupyter notebook).
