--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "## WHAT IS IT?\n",
     "+ Julia: A fresh approach to numerical computing, see [paper](http://arxiv.org/abs/1411.1607)\n",
-    "+ High level, dynamic, (dynamically) typed langauage, general purpose \n",
+    "+ High level, dynamic, (dynamically) typed, general purpose language\n",
     "+ Free and open-source. MIT licence\n",
     "+ Went [viral](https://www.google.com/trends/explore#q=julia%20language) on Valentine's day 2014\n",
     "+ Some features we will see in action today\n",
@@ -141,8 +141,8 @@
     "Short answer - to address the two language paradygm\n",
     "+ Express the idea in high level language(Python) - setup prototype quickly. Performance far from production code\n",
     "+ Production code then written in low level language (C/C++)\n",
-    "+ Write performance critical parts of code in low level language and glued together (Number, SWIG)\n",
-    "    - FEniCS uses Python to spit C++ code that is compiled and wrapped for Python\n",
+    "+ Write performance critical parts of code in low level language and glue together (Numba, SWIG)\n",
+    "    - FEniCS uses Python to generate C++ code that is compiled and wrapped for Python\n",
     "    - Diako/Mikael prototype in Python/NumPy and then write the same code in Cython\n",
     "+ To extend NumPy/SciPy you (usually) have to write C"
    ]
@@ -161,7 +161,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "              |     F|Julia |Python\t|R      |Matlab\t|Octave\t    |Mathmn\t|JS\t    |Go\t    |LuaJIT\t|Java\n",
+    "              |     F|Julia |Python\t|R      |Matlab\t|Octave\t    |Mathm\t|JS\t    |Go\t    |LuaJIT\t|Java\n",
     "--------------|------|------|-------|-------|-------|-----------|-------|-------|-------|-------|----    \n",
     "fib\t          |0.70  |2.11\t|77.76\t|533.52\t|26.89\t|9324.35\t|118.53\t|3.36\t|1.86\t|1.71\t|1.21\n",
     "parse_int\t  |5.05\t |1.45\t|17.02\t|45.73\t|802.52\t|9581.44\t|15.02\t|6.06\t|1.20\t|5.77\t|3.35\n",
@@ -176,14 +176,379 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WHEN IT READS LIKE PYTHON"
+    "## WHEN IT READS LIKE PYTHON\n",
+    "\n",
+    "+ Illustrate (not unrealistic) workflow by a made of postprocessing example\n",
+    "+ Note that this is high-level: there are lambdas `x -> x + 1`, higher order functions, containers\n",
+    "+ No type declarations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Read the content on the directory and keep only the files\n",
+    "files = filter(isfile, readdir(\".\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# How many of the files are Julia files\n",
+    "n_jl_files = count(f -> endswith(f, \".jl\"), files)\n",
+    "println(\"$(pwd()) contains $(n_jl_files) files.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get those files and print them\n",
+    "jl_files = files[find(f -> endswith(f, \".jl\"), files)]\n",
+    "for (i, file) in enumerate(jl_files)\n",
+    "    println(\"Julia file $(file)\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We have seen Array container. Let's show Sets\n",
+    "jl_files2 = append!(jl_files, jl_files)\n",
+    "jl_set = Set(jl_files2)\n",
+    "println(\"$(pwd()) contains $(length(jl_set)) files.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Reading from file. How many words in the MIT licence?\n",
+    "LICENCE = open(\"LICENSE\")\n",
+    "content = lowercase(readall(LICENCE))\n",
+    "words = split(content, r\"\\W\", keep=false)\n",
+    "close(LICENCE)\n",
+    "length(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Count them with multiplicity\n",
+    "unique = Dict()\n",
+    "for word in words\n",
+    "    unique[word] = get(unique, word, 0) + 1\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Most common ones\n",
+    "for (k, v) in sort(collect(unique), by=last, rev=true)\n",
+    "    println(\"$(k) $(v)\")\n",
+    "end"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SOME DIFFERENCES FROM PYTHON"
+    "## SOME DIFFERENCES FROM PYTHON\n",
+    "\n",
+    "A few examples where the behaviour from Python is different"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# : is => in the dictionary construction\n",
+    "dict = Dict(1 => \"Miro\", 2 => \"Kuchta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# in checks for (key, value) pair\n",
+    "haskey(dict, 1), (1 => \"Miro\") ∈ dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# iteration is over (key, values) pairs\n",
+    "for (key, value) in dict\n",
+    "    println(\"$key => $value\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Sting concatenation is done with *. With + the operation should be commutative, which is not the case here\n",
+    "\"Julia \" * \" Language\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# / is for floating point division. Integer division is done by div\n",
+    "/(7, 4), div(7, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Indexing starts at one. The last element in range is included\n",
+    "a = [1, 2, 3]\n",
+    "try\n",
+    "    a[0]\n",
+    "catch BoundsError\n",
+    "    println(\"No no, a[1]=\", a[1], \" \", a[end] == a[3] == 3)\n",
+    "end\n",
+    "\n",
+    "collect(1:10)[10] == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# complex numbers\n",
+    "complex(1, 1) == 1 + 1im"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Convenience\n",
+    "x = 4\n",
+    "y = 2x  # no *\n",
+    "y == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# More convenience. Save one \"for\"\n",
+    "[(i, j) for i in 1:4, j in \"abcd\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# The arrays are column majored. In particular vector is a column vector\n",
+    "a = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Contrast this with Python\n",
+    "A = reshape(collect(1:25), (5, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# In numpy you get to iterate over rows of matrix (for vectorization). In Julia this is not default. \n",
+    "entries = [e for e in A]  #join(map(string, collect(A)), \", \")\n",
+    "# Moverover, columns are contiguous so accessing rows is not efficient.\n",
+    "# Finaly you iterate over values not pointers\n",
+    "for a in A\n",
+    "    a += 1\n",
+    "end\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Column majored linear indexing\n",
+    "A[8] == 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now onto functions. Recall that you have already seen lambas `x -> 2x`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Multiline lambdas\n",
+    "map(f -> begin\n",
+    "    name, ext = splitext(f)\n",
+    "    uppercase(name)*uppercase(ext)^2\n",
+    "    end, readdir(\".\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# One lined named function definition\n",
+    "f(x, y) = 2x + 4y\n",
+    "f(1, 0) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Implicit return statements\n",
+    "function f(name)\n",
+    "    if isequal(name, \"Miro\")\n",
+    "        return \"slav\"\n",
+    "    end\n",
+    "    \"!\"\n",
+    "end\n",
+    "\n",
+    "(f(\"Miro\"), f(\"You\")) == (\"slav\", \"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Variable positional arguments\n",
+    "mysum(args...) = join(map(string, args), \"+\")\n",
+    "mysum(10, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Keyword arguments. Not a dictionary\n",
+    "function foo(args...; kwargs...)\n",
+    "    kwargs = Dict([k => v for (k, v) in kwargs])\n",
+    "    ans = join(map(string, args), \"?\")\n",
+    "    if haskey(kwargs, :x)  # Ignore :x for a while. It comes from the 'strange' kwargs array\n",
+    "        ans = ans * \"?\" * string(kwargs[:x])\n",
+    "    end\n",
+    "    ans \n",
+    "end\n",
+    "foo(10, 20, x=40)"
    ]
   },
   {
@@ -191,6 +556,80 @@
    "metadata": {},
    "source": [
     "## WHEN IT _IS_ PYTHON"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ Not entirely sure about giving up Python? What if you could use Julia with Python to make the transition easier?\n",
+    "+ The whole Python ecosystem can be reached via Pkg __PyCall__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "using PyCall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's load numpy and have it compute for us the eigenvalues of some matrix\n",
+    "@pyimport numpy.linalg as npla\n",
+    "A = diagm([1, 2, 3, 4])          # Julia matrix\n",
+    "eigv, eigw = npla.eig(A)         # Passed to python no copying\n",
+    "eigv                             # The result is Julia Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's have numpy make the matrix and then Julia takes over for the actual work\n",
+    "@pyimport numpy as np\n",
+    "Apy = np.diag([1, 2, 3, 4])  # Note that this is Julia array passed to Numpy which comes back as a Julia matrix\n",
+    "eigvals(Apy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Julia has native packages for plotting, but why give up matplotlib\n",
+    "@pyimport matplotlib.pyplot as plt\n",
+    "\n",
+    "x = linspace(-1, 1, 100)\n",
+    "y = sin(2π*x)\n",
+    "plt.figure()\n",
+    "plt.plot(x, y)\n",
+    "plt.xlabel(\"\\$x\\$\")  # Note that dollars have to be escaped for they have special role in Julia's string (interpolation)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that you can have a jupyter notebook running Python kernel and import Julia as a module."
    ]
   },
   {
