--- a/py_julia_intro_uio_phd_seminar.ipynb
+++ b/py_julia_intro_uio_phd_seminar.ipynb
@@ -2,26 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3,  4,  5],\n",
-       "       [ 6,  7,  8,  9, 10],\n",
-       "       [11, 12, 13, 14, 15],\n",
-       "       [16, 17, 18, 19, 20],\n",
-       "       [21, 22, 23, 24, 25]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show that python is row majored\n",
     "import numpy as np\n",
@@ -32,23 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3  4  5  6  7]\n",
-      " [ 8  9 10 11 12]\n",
-      " [13 14 15 16 17]\n",
-      " [18 19 20 21 22]\n",
-      " [23 24 25 26 27]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Row iteration in python\n",
     "for row in A:\n",
@@ -58,19 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No linear indexing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    A[8]\n",
@@ -82,10 +47,48 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Collatz\n",
+    "def collatz_chain(n):\n",
+    "    'Compute the Collatz chain for number n.'\n",
+    "    k = 1\n",
+    "    while n > 1:\n",
+    "        n = 3*n+1 if (n % 2) else n >> 1\n",
+    "        k += 1\n",
+    "        # print n\n",
+    "    return k\n",
+    "\n",
+    "def solve_euler(stop):\n",
+    "    'Which of the number [1, stop) has the longest Collatz chain.'\n",
+    "    n, N, N_max = 1, 0, 0  \n",
+    "    while n < stop:\n",
+    "        value = collatz_chain(n)\n",
+    "        if value > N_max:\n",
+    "            N = n\n",
+    "            N_max = value\n",
+    "        n += 1\n",
+    "    return N, N_max\n",
+    "\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "N = 1000000\n",
+    "t0 = time.time()\n",
+    "ans = solve_euler(N)\n",
+    "t1 = time.time() - t0\n",
+    "ans, t1"
+   ]
   }
  ],
  "metadata": {
