--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -174,6 +174,117 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Some benchmark problems of our own"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Project Euler problem 14. The following iterative sequence is defined for the set of positive integers:\n",
+    "\n",
+    "+ n → n/2 (n is even)\n",
+    "+ n → 3n + 1 (n is odd)\n",
+    "\n",
+    "Using the rule above and starting with 13, we generate the following sequence: 13 → 40 → 20 → 10 → 5 → 16 → 8 → 4 → 2 → 1. Which starting number, under one million, produces the longest chain? Note that whether the chain terminates for arbitrary $n$ is an unproved conjecture.\n",
+    "\n",
+    "+ To solve PE problem's the solution must be obtained in less then 60s. Honor code is to beat 1s.\n",
+    "+ Note that the code presented here is not optimal. It is rather a brute force solution.\n",
+    "+ The answer it produces is correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"Compute the Collatz chain for number n.\"\"\"\n",
+    "function collatz_chain(n)\n",
+    "    k = 1\n",
+    "    while n > 1\n",
+    "        n = isodd(n) ? 3n+1 : n >> 1\n",
+    "        k += 1\n",
+    "        # println(n)\n",
+    "    end\n",
+    "    k\n",
+    "end\n",
+    "\n",
+    "\"\"\"Which of the number [1, stop) has the longest Collatz chain.\"\"\"\n",
+    "function solve_euler(stop)\n",
+    "    n, N, N_max = 1, 0, 0  \n",
+    "    while n < stop\n",
+    "        value = collatz_chain(n)\n",
+    "        if value > N_max\n",
+    "            N = n\n",
+    "            N_max = value\n",
+    "        end\n",
+    "        n += 1\n",
+    "    end\n",
+    "    (N, N_max)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's time it\n",
+    "N = 1000000\n",
+    "t0 = tic()\n",
+    "answer = solve_euler(N)\n",
+    "t1 = toc();\n",
+    "answer, t1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Julia is done in about 0.3s, Python need 12s. So with Julia I am onto the next problem. With Python it is back to the drawing board."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## WHEN IT READS LIKE PYTHON\n",
@@ -629,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that you can have a jupyter notebook running Python kernel and import Julia as a module."
+    "Note that you can have a jupyter notebook running Python kernel, import Julia as a module and let the two languages play along nicely."
    ]
   },
   {
