--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -185,7 +185,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Project Euler problem 14. The following iterative sequence is defined for the set of positive integers:\n",
+    "### Project Euler problem 14. \n",
+    "The following iterative sequence is defined for the set of positive integers:\n",
     "\n",
     "+ n → n/2 (n is even)\n",
     "+ n → 3n + 1 (n is odd)\n",
@@ -257,31 +258,89 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Julia fractal\n",
+    "+ It is only approprate that we explore the Julia set\n",
+    "+ Explore points $z$ such that $z_{n+1}=z^2_{n}+c$ is bounded for any n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Julia code is a translation of the definition\n",
+    "\"\"\"Color Julia set. Code from https://www.youtube.com/watch?v=PsjANO10KgM\"\"\"\n",
+    "function julia(z, c)\n",
+    "    for n in 1:80\n",
+    "        if abs2(z) > 4\n",
+    "            return n-1\n",
+    "        end\n",
+    "        z = z*z + c\n",
+    "    end\n",
+    "    return 80\n",
+    "end"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# We explore few points\n",
+    "cs = (complex(-0.06, 0.67), complex(0.279, 0), complex(-0.4, 0.6), complex(0.285, 0.01))\n",
+    "\n",
+    "x = collect(1:-0.002:-1);\n",
+    "y = collect(-1.5:0.002:1.5);\n",
+    "\n",
+    "Js = []\n",
+    "# Evaluate fractal generation\n",
+    "t0 = tic()\n",
+    "for c in cs\n",
+    "    #push!(Js, [julia(complex(r, i), c) for i in x, r in y]);\n",
+    "    push!(julia_faster(x, y, c))\n",
+    "end\n",
+    "t1 = toc()\n",
+    "\n",
+    "@printf(\"Generated in %.4f s\\n\", t1);\n",
+    "println(\"Image size $(size(J, 1))x$(size(J, 2))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Here we use python interopt(more on that later) to plot the fractals\n",
+    "using PyCall\n",
+    "@pyimport matplotlib.pyplot as plt\n",
+    "\n",
+    "for J in Js\n",
+    "    plt.figure()\n",
+    "    plt.imshow(J, cmap=\"viridis\", extent=[-1.5, 1.5, -1, 1])\n",
+    "end\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "About 4 seconds is required to make the fractals. This is slower then Python which takes about 2.8. However the speed comes from clever vectorization. And don't worry the code above can be made faster."
+   ]
   },
   {
    "cell_type": "markdown",
