--- a/py_julia_intro_uio_phd_seminar.ipynb
+++ b/py_julia_intro_uio_phd_seminar.ipynb
@@ -89,6 +89,89 @@
     "t1 = time.time() - t0\n",
     "ans, t1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Adopted from https://thesamovar.wordpress.com/2009/03/22/fast-fractals-with-python-and-numpy/\n",
+    "def julia(x, y, c):\n",
+    "    X, Y = np.meshgrid(x, y)\n",
+    "    Z = X + complex(0, 1)*Y\n",
+    "    del X, Y\n",
+    "    \n",
+    "    C = c*np.ones(Z.shape, dtype=complex)\n",
+    "    img = 80*np.ones(C.shape, dtype=int)\n",
+    "    \n",
+    "    ix, iy = np.mgrid[0:Z.shape[0], 0:Z.shape[1]]\n",
+    "    Z, C, ix, iy = map(lambda mat: mat.flatten(), (Z, C, ix, iy))\n",
+    "\n",
+    "    for i in xrange(80):\n",
+    "        if not len(Z): break\n",
+    "        np.multiply(Z, Z, Z)  # z**2 + c\n",
+    "        np.add(Z, C, Z)\n",
+    "        rem = abs(Z) > 2.0    # Unbounded - definite color\n",
+    "        img[ix[rem], iy[rem]] = i + 1\n",
+    "        rem = ~rem            # Bounded - keep for next round\n",
+    "        Z = Z[rem]                    # Update variables for next round\n",
+    "        ix, iy = ix[rem], iy[rem]\n",
+    "        C = C[rem]\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cs = (complex(-0.06, 0.67), complex(0.279, 0), complex(-0.4, 0.6), complex(0.285, 0.01))\n",
+    "\n",
+    "x = np.arange(1, -1, -0.002)\n",
+    "y = np.arange(-1.5, 1.5, 0.002)\n",
+    "\n",
+    "Js = []\n",
+    "# Evaluate fractal generation\n",
+    "t0 = time.time()\n",
+    "for c in cs:\n",
+    "    Js.append(julia(x, y, c))\n",
+    "t1 = time.time() - t0\n",
+    "print 'Generated in %.4f s' % t1\n",
+    "print 'Image size %d x %d' % J.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "for J in Js:\n",
+    "    plt.figure()\n",
+    "    plt.imshow(J, cmap=\"viridis\", extent=[-1.5, 1.5, -1, 1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 1, 3)[ix]"
+   ]
   }
  ],
  "metadata": {
