--- a/julia_intro_uio_phd_seminar.ipynb
+++ b/julia_intro_uio_phd_seminar.ipynb
@@ -806,7 +806,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WHEN IT _IS NOT_ PYTHON / REASONS FOR SPEED"
+    "## WHEN IT _IS NOT_ PYTHON / REASONS FOR SPEED\n",
+    "\n",
+    "I do not know/understand the whole story. It seems magical. That said, let me quote the Julia manual:\n",
+    "\n",
+    "> Clever application of sufficiently advanced technology can be indistiguishable from magic (A.C. Clarke)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Your code is parsed, type annotated(types can be inferred). \n",
+    "simplef(x, y) = x+y\n",
+    "@code_warntype simplef(1, 2)   # Note x, y have types here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# When f is called with specific values JIT compiles the function. With type annotation the compiler can reason about\n",
+    "# the code and generate efficient code.\n",
+    "@code_llvm simplef(1, 2)        # Note @julia_simplef_FOO(i64, i64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# If called with values of same type. We get a cached function\n",
+    "@code_llvm simplef(1, 2)        # Note @julia_simplef_FOO(i64, i64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Different value types will invoke JIT again\n",
+    "@code_llvm simplef(1, 2.)        # @julia_simplef_BAR(i64, double)"
    ]
   },
   {
@@ -827,7 +881,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BATTERIES INCLUDED"
+    "## BATTERIES INCLUDED\n",
+    "\n",
+    "+ Julia has very large scientific stack, e.g. FFT (FFTW by Steven G. Johnson), LA(LAPACK, BLAS, SuiteSparse), statistics\n",
+    "+ Native plotting, e.g. _Gadfly_ package\n",
+    "+ You can use Python modules(`PyCall`), existing C/Fortran libraries(`ccall`)\n",
+    "+ Opportunity to write missing packages!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@pyimport scipy.fftpack as pyfft\n",
+    "# Show that FFT works\n",
+    "v = rand(20)\n",
+    "\n",
+    "fft_jl = FFTW.r2r(v, [FFTW.REDFT10])\n",
+    "fft_py = pyfft.dct(v)\n",
+    "\n",
+    "norm(fft_jl - fft_py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Native plotting with Gadfly\n",
+    "using Gadfly\n",
+    "plot(y=fft_jl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "factorize(S::<b>SymTridiagonal{T}</b>) at <a href=\"https://github.com/JuliaLang/julia/tree/1a9429ee5e240e478f0240a31629f9de75338690/base/linalg/ldlt.jl#L46\" target=\"_blank\">linalg/ldlt.jl:46</a>"
+      ],
+      "text/plain": [
+       "factorize(S::SymTridiagonal{T}) at linalg/ldlt.jl:46"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05742739384431261\n",
+      "0.00406087309076182\n",
+      "0.002871496220147093\n",
+      "0.0020304589269507247\n",
+      "0.0014357520673215604\n",
+      "0.0010152301641646005\n",
+      "0.0007178761457711251\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear algebra. The favourite Poisson problem on UnitInterval. Convergence\n",
+    "A = 0  # Keep A outside for loop\n",
+    "for ncells in [2^i for i in 8:14]\n",
+    "    h = 1/ncells\n",
+    "    x = Float64[h*i for i in 0:ncells]\n",
+    "    F = sin(2π*x)\n",
+    "    U = sin(2π*x)/4/π^2\n",
+    "    \n",
+    "    # Based on type of A specialized solver will be called\n",
+    "    A = SymTridiagonal(fill(2, ncells+1), fill(-1, ncells))/h\n",
+    "    b = h*F\n",
+    "\n",
+    "    u = A\\b\n",
+    "    e = norm(u - U)\n",
+    "    println(e)\n",
+    "end\n",
+    "\n",
+    "# Which factorize was dispatched\n",
+    "@which factorize(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System size 9, lmin=5.396945915394443\n",
+      "System size 17, lmin=3.094555556451626\n",
+      "System size 33, lmin=1.4650779232335207\n",
+      "System size 65, lmin=0.6797474241796966\n",
+      "System size 129, lmin=0.32442205306690397\n",
+      "System size 257, lmin=0.1582254302874535\n",
+      "System size 513, lmin=0.07811004502728203\n",
+      "System size 1025, lmin=0.03880408264532953\n",
+      "System size 2049, lmin=0.01933930544917395\n"
+     ]
+    }
+   ],
+   "source": [
+    "# And now the eigenvalues. Convergence\n",
+    "for ncells in [2^i for i in 3:11]\n",
+    "    h = 1/ncells\n",
+    "    x = Float64[h*i for i in 0:ncells]\n",
+    "\n",
+    "    A = SymTridiagonal(fill(2, ncells+1), fill(-1, ncells))/h\n",
+    "    M = SymTridiagonal([1.; fill(4h/6, ncells-1); 1.], fill(h/6, ncells))\n",
+    "    eigw, eigv = eig(full(A), full(M))\n",
+    "    lmin = minimum(eigw)\n",
+    "    println(\"System size $(length(eigw)), lmin=$(abs(lmin-π^2))\")\n",
+    "end"
    ]
   },
   {
